WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307766
VideoFrame constructor is not handling video range properly for NV12
https://bugs.webkit.org/show_bug.cgi?id=307766
Summary
VideoFrame constructor is not handling video range properly for NV12
youenn fablet
Reported
2026-02-13 00:19:13 PST
I420 BT601 VideoFrames are not drawn correctly
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-13 00:19:23 PST
<
rdar://problem/170299037
>
youenn fablet
Comment 2
2026-02-13 01:24:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58608
EWS
Comment 3
2026-02-16 09:16:49 PST
Committed
307649@main
(85b827db1688): <
https://commits.webkit.org/307649@main
> Reviewed commits have been landed. Closing PR #58608 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug