VideoFrame constructor is not handling video range properly for NV12 rdar://170299037 https://bugs.webkit.org/show_bug.cgi?id=307766

Reviewed by Eric Carlson.

Creating BT601 video frame from JS was not handling fullrange/videorange.
We fix this in VideoFrame::createNV12 and VideoFrame::createI420.

Covered by added test.
This test is adding an extra tolerance for some values, due to differences on how BT601 is converted to RGB with VT.

Canonical link: https://commits.webkit.org/307649@main